--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.S170422ZahraSoleimani">
-        <activity android:name=".StartGame"></activity>
+        <activity android:name=".GameOver"></activity>
+        <activity android:name=".Win" />
+        <activity android:name=".StartGame" />
         <activity android:name=".GameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
