--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.S170422ZahraSoleimani">
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".GameOver" />
         <activity android:name=".Win" />
         <activity android:name=".Game" />
-        <activity android:name=".Main">
+        <activity android:name=".WelcomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
