--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.S170422ZahraSoleimani">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Main"></activity>
         <activity android:name=".GameOver" />
         <activity android:name=".Win" />
         <activity android:name=".Game" />
